# This file is part of the dune-hdd project:
#   http://users.dune-project.org/projects/dune-hdd
# Copyright holders: Felix Albrecht
# License: BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)

SUBDIRS = doxygen
CURDIR = doc
BASEDIR = ..

# add list of html files to generate from wml
PAGES=

docdir=$(datadir)/doc/dune-hdd

include $(top_srcdir)/am/webstuff
include $(top_srcdir)/am/global-rules
