# This file is part of the dune-hdd project:
#   http://users.dune-project.org/projects/dune-hdd
# Copyright holders: Felix Albrecht
# License: BSD 2-Clause License (http://opensource.org/licenses/BSD-2-Clause)

BASEDIR=../..
CURDIR=doc/doxygen

include $(top_srcdir)/am/doxygen
include $(top_srcdir)/am/global-rules

